--- a/src/thanks.html
+++ b/src/thanks.html
@@ -113,7 +113,7 @@ canonical-url: https://evanrosaportfolio.com/thank-you/
 
                             <h2 class="text-center x-space"><strong>Subscribe to the to my blog</strong></h2>
 
-                            <form id="mail-contact" name="evroD-blog-subscribe" action="thanks-you" data-abide novalidate netlify netlify-honeypot="bot-field">
+                            <form id="mail-contact" name="evroD-blog-subscribe" action="thank-you" data-abide novalidate netlify netlify-honeypot="bot-field">
                                 <div class="contactForm">
                                     <p>Enter your name and email below to sign-up</p>
                                     <label class="hide">Bot field:
