card-all rename to card

--- a/src/blog.html
+++ b/src/blog.html
@@ -122,7 +122,7 @@ canonical-url: https://evanrosaportfolio.com/blog/
             <ul class="orbit-container block-animate clearfix">
                 <li class="is-active orbit-slide clearfix">
                    <div class="row">
-                       {% include card-all.html %}
+                       {% include card.html %}
                    </div>
                 </li>
 
