--- a/src/search.html
+++ b/src/search.html
@@ -71,7 +71,7 @@ canonical-url: https://evanrosaportfolio.com/search/
 
 
 </section>
-{% include contact.html %}
+{% include_relative /_includes/contact.html %}
 
 
 
