updated source files

--- a/src/index.html
+++ b/src/index.html
@@ -963,4 +963,4 @@ canonical-url: https://evanrosaportfolio.com/
         </div>
     </section>
 </div>
-{% include_relative /_includes/contact.html %}
+{% include contact.html %}
