--- a/src/404.html
+++ b/src/404.html
@@ -1,8 +1,8 @@
 ---
 layout: thank-you
 title: 404
-description: 404 - Error | Evan Rosa's Portfolio
-permalink: /404.html
+description: 404 - Error - Evan Rosa's Portfolio
+permalink: /404/
 canonical-url: https://evanrosaportfolio.com/404/
 ---
 <div class="vert-align-center">
