design and seo updates

--- a/src/blog.html
+++ b/src/blog.html
@@ -16,12 +16,12 @@ canonical-url: https://evanrosaportfolio.com/blog/
     <div class="intro-text">
         <div class="row">
             <div class="small-12 columns text-left">
-                <h1 class="other-title" id="name">Evan Rosa's Blog</h1>
+                <h1 class="other-title" id="name">Evan Rosa's Web Blog</h1>
             </div>
         </div>
         <div class="row">
-            <div class="small-12 columns text-left type-span">
-                <h2 id="itype">Digital Marketing, Development, and Analytics</h2>
+            <div class="small-12 columns text-left">
+                <h2 id="text-fade">Digital Marketing, Web Development, and Analytics</h2>
             </div>
         </div>
         <div class="row share">
@@ -62,7 +62,7 @@ canonical-url: https://evanrosaportfolio.com/blog/
                     <section class="blog-signup text-center">
                         <form id="mail-contact" name="evroD-blog-subscribe" action="thank-you" data-abide novalidate netlify netlify-honeypot="bot-field">
                             <div class="contactForm">
-                                <h2><strong>Subscribe to Evan's Blog</strong></h2>
+                                <p class="reveal-subscribe"><strong>Subscribe to Evan's Blog</strong></p>
                                 <p>Enter your name and email below to sign-up</p>
                                 <label class="hide">Bot field:
                                     <input name="bot-field">
@@ -147,4 +147,4 @@ canonical-url: https://evanrosaportfolio.com/blog/
         </div>
     </div>
 </section>
-{% include_relative /_includes/contact.html %}
+{% include contact.html %}
