--- a/src/search.html
+++ b/src/search.html
@@ -17,7 +17,7 @@ canonical-url: https://evanrosaportfolio.com/search/
     <div class="intro-text blog-intro">
         <div class="row">
             <div class="small-12 columns text-left">
-                <h1 class="other-title" id="name">Search</h1>
+                <h1 class="other-title" id="name">Search Evan Rosa's Blog</h1>
             </div>
         </div>
         <div class="row">
