404 btn align center

--- a/src/404.html
+++ b/src/404.html
@@ -54,7 +54,7 @@ canonical-url: https://evanrosaportfolio.com/404/
 
 
             </div>
-            <div id="intro-btn" class="row">
+            <div id="intro-btn" class="row align-center">
 
 
 
