SEO description and title update

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Washington DC based Digital Marketer, Front-End Developer, and Analytics Professional | Evan Rosa
+title: DC based Digital Marketer, Developer, and Analytics Pro | Evan Rosa
 description: Evan Rosa is a digital marketer, developer, and digital analytics professional with an expertise in managing UA architectures and marketing tag strategies.
 author: Evan Rosa
 image: /assets/img/svg/logo.svg
