--- a/src/search.html
+++ b/src/search.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Evan Rosa's Blog Search
-description: Blog Search | Evan Rosa
+title: Evan Rosa's Blog Search | Evan Rosa
+description: Digital Marketing, Development, and Analytics Blog Search | Evan Rosa
 author: Evan Rosa
 image: /assets/img/svg/logo.svg
 permalink: /search/
