--- a/src/subscribe.html
+++ b/src/subscribe.html
@@ -1,6 +1,6 @@
 ---
 layout: thank-you
-title: Thanks for subscribing to my blog
+title: Thanks for subscribing to Evan Rosa's blog | Evan Rosa
 description: Thank you for subscribing to Evan Rosa's Blog
 author: Evan Rosa
 image: /assets/img/svg/logo.svg
