schema.org update

--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@ canonical-url: https://evanrosaportfolio.com/
     <div class="intro-text clear">
         <div class="row">
             <div class="small-12 columns text-center">
-                <h2 class="title lead" id="name">Hi, I'm Evan Rosa</h2>
+                <h2 class="title lead" id="name">Hi, <span itemprop="name">I'm Evan Rosa</span></h2>
             </div>
         </div>
         <div class="row">
             <div id="text-fade" class="small-12 columns text-center type-span clear">
-                <h1 class="sub-title">Washington DC based Digital Marketer, Front-End Developer, and Analytics Professional</h1>
+                <h1 class="sub-title"><span itemprop="homeLocation">Washington DC</span> based <span itemprop="jobTitle">Digital Marketer, Front-End Developer, and Analytics Professional</span></h1>
             </div>
         </div>
         <div class="row share">
@@ -74,7 +74,7 @@ canonical-url: https://evanrosaportfolio.com/
     </div>
     <div class="row who-p align-center">
         <div class="small-10 medium-8 column">
-           <p class="text-center block-animate">Hi, I'm Evan Rosa. A Washington DC based digital marketer, front-end developer, and digital analytics professional. I'm very passionate about creating cohesive brand experiences and achieving transformational business results through digitally-driven creative marketing strategy. As a current digital analytics professional, I've had the unique opportunity to work with FDA, HHS, and non-profit websites to understand website usage and assisted in launching a variety of business programs. I define myself as a hybrid professional between the business of digital marketing and analytics as well as the technical side of front-end web development. I find that these skillsets are intertwined and are necessary to building a successful website or app. When I'm not working, I can usually be found jamming out on my guitar, traveling with my family or exploring the culinary world.</p>
+           <p class="text-center block-animate" itemprop="description">Hi, I'm Evan Rosa. A Washington DC based digital marketer, front-end developer, and digital analytics professional. I'm very passionate about creating cohesive brand experiences and achieving transformational business results through digitally-driven creative marketing strategy. As a current digital analytics professional, I've had the unique opportunity to work with FDA, HHS, and non-profit websites to understand website usage and assisted in launching a variety of business programs. I define myself as a hybrid professional between the business of digital marketing and analytics as well as the technical side of front-end web development. I find that these skillsets are intertwined and are necessary to building a successful website or app. When I'm not working, I can usually be found jamming out on my guitar, traveling with my family or exploring the culinary world.</p>
         </div>
     </div>
     <div class="row city">
