--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@ canonical-url: https://evanrosaportfolio.com/
     <div class="intro-text clear">
         <div class="row">
             <div class="small-12 columns text-center">
-                <h2 class="title lead" id="name">Hi, <span itemprop="name">I'm Evan Rosa</span></h2>
+                <h2 class="title lead" id="name">Hi, I'm <span itemprop="name">Evan Rosa</span></h2>
             </div>
         </div>
         <div class="row">
