changed schema placement

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@ author: Evan Rosa
 image: /assets/img/svg/logo.svg
 canonical-url: https://evanrosaportfolio.com/
 ---
-
+<div itemscope itemtype="http://schema.org/Person">
 <!--Section One: Main Intro with office background -->
 <section data-scrollmagic id="intro" data-magellan-target="intro" class="introduction parallaxParent parallaxParent-intro">
     <div class="office-back" data-interchange="[assets/img/pics/mac-desk-black-s.jpg, default], [assets/img/pics/mac-desk-black-s.jpg, small], [assets/img/pics/mac-desk-black-m.jpg, medium], [assets/img/pics/mac-desk-black-l.jpg, large], [assets/img/pics/mac-desk-black-xl.jpg, xlarge], [assets/img/pics/mac-desk-black-xxl.jpg, xxlarge], [assets/img/pics/mac-desk-black-retina.jpg, retina]">
@@ -963,3 +963,4 @@ canonical-url: https://evanrosaportfolio.com/
     </section>
 </div>
 {% include contact.html %}
+</div>
