see pipe replaced with dash

--- a/src/404.html
+++ b/src/404.html
@@ -1,7 +1,7 @@
 ---
 layout: thank-you
 title: 404
-description: 404 - Error | Evan Rosa's Portfolio
+description: 404 - Error - Evan Rosa's Portfolio
 permalink: /404/
 canonical-url: https://evanrosaportfolio.com/404/
 ---
