--- a/src/thanks.html
+++ b/src/thanks.html
@@ -1,7 +1,7 @@
 ---
 layout: thank-you
 title: Thank You | Evan Rosa
-description: Thank you for contacting Evan Rosa in regards to his web portfolio | Evan Rosa
+description: Thank you for contacting Evan Rosa in regards to his web portfolio - Evan Rosa
 author: Evan Rosa
 image: /assets/img/svg/logo.svg
 permalink: /thank-you/
