--- a/src/blog.html
+++ b/src/blog.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: DC Blog on Digital Marketing, Development, and Analytics | Evan Rosa
-description: A blog that discusses ideas and web trends in web development, digital analytics, and digital marketing | Evan Rosa
+title: DC Blog on Digital Marketing, Development, and Analytics - Evan Rosa
+description: A blog that discusses ideas and web trends in web development, digital analytics, and digital marketing - Evan Rosa
 author: Evan Rosa
 image: /assets/img/svg/logo.svg
 permalink: /blog/
