--- a/src/blog.html
+++ b/src/blog.html
@@ -28,7 +28,7 @@ canonical-url: https://evanrosaportfolio.com/blog/
             <div class="small-12 columns text-left">
                 <ul id="s-list" class="no-bullet">
                     <li>
-                        <a href="https://www.linkedin.com/in/erosa26" target="_blank" data-description="Main LinkedIn Click">
+                        <a href="https://www.linkedin.com/in/evan-rosa" target="_blank" data-description="Main LinkedIn Click">
                             <div class="social-svg">
                                 <object data="../assets/img/svg/linkedin.svg" type="image/svg+xml"><img src="../assets/img/pics/linkedin.png" alt="Evan Rosa LinkedIn Profile"></object>
                             </div>
