--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@ canonical-url: https://evanrosaportfolio.com/
             <div class="small-12 columns text-center">
                 <ul id="s-list" class="no-bullet">
                     <li>
-                        <a href="https://www.linkedin.com/in/erosa26" target="_blank" data-description="Main LinkedIn Click">
+                        <a href="https://www.linkedin.com/in/evan-rosa" target="_blank" data-description="Main LinkedIn Click">
                             <div class="social-svg">
                                 <object data="assets/img/svg/linkedin.svg" type="image/svg+xml"><img src="assets/img/pics/linkedin.png" alt="Evan Rosa LinkedIn Profile"></object>
                             </div>
