--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@ canonical-url: https://evanrosaportfolio.com/
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.facebook.com/erosa26" target="_blank" data-description="Main Facebook Click">
+                        <a href="https://www.facebook.com/evandanielrosa" target="_blank" data-description="Main Facebook Click">
                             <div class="social-svg">
                                 <object data="assets/img/svg/F_icon.svg" type="image/svg+xml"><img src="assets/img/pics/F_icon.png" alt="Evan's Facebook Page"></object>
                             </div>
