--- a/src/thanks.html
+++ b/src/thanks.html
@@ -29,14 +29,14 @@ canonical-url: https://evanrosaportfolio.com/thank-you/
                     <div class="share thank-you-share">
                         <ul id="s-list" class="no-bullet">
                             <li>
-                                <a href="https://www.linkedin.com/in/erosa26" target="_blank" data-description="Main LinkedIn Click">
+                                <a href="https://www.linkedin.com/in/evan-rosa" target="_blank" data-description="Main LinkedIn Click">
                                     <div class="share-thank">
                                         <object data="/assets/img/svg/linkedin-navy.svg" type="image/svg+xml"><img src="/assets/img/pics/linkedin-navy.png" alt="Evan Rosa LinkedIn Profile"></object>
                                     </div>
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.facebook.com/erosa26" target="_blank" data-description="Main Facebook Click">
+                                <a href="https://www.facebook.com/evandanielrosa" target="_blank" data-description="Main Facebook Click">
                                     <div class="share-thank">
                                         <object data="/assets/img/svg/F_icon-navy.svg" type="image/svg+xml"><img src="/assets/img/pics/F_icon-navy.png" alt="Evan Rosa's Facebook Page"></object>
                                     </div>
